Icon vertical alignment correction

--- a/components/link/theme.css
+++ b/components/link/theme.css
@@ -11,7 +11,7 @@
   padding: 0;
 
   svg {
-    transform: translateY(-1px);
+    transform: translateY(-2px);
   }
 
   * + svg,
